@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix concatenates in for loop assignments.  [Mark Nodine]
 
+****	Fix endmodule/endfunc callback line numbers.
+
 * Verilog::Language 3.013 2007/10/18
 
 ****	Fix parsing module #(parameter x,y) declarations. [Oleg Rodionov]
